--- a/static/subPages/dashboard.html
+++ b/static/subPages/dashboard.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+staticUrl
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -296,7 +296,7 @@
                         <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                       </div>
                       <!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="{% static "dist/img/user1-128x128.jpg" %}" alt="message user image">
+                      <img class="direct-chat-img" src="/static/dist/img/user1-128x128.jpg" alt="message user image">
                       <!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Is this template really for free? That's unbelievable!
