add static pages
Signed-off-by: Tianwei Yang <yangtianwei@outlook.com>

--- a/static/pages_org/admin.html
+++ b/static/pages_org/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Calendar</title>
+  <title>FutureERP beta | 仪表盘</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -37,11 +37,11 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="../index2.html" class="logo">
+    <a href="../dashboard.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Admin</b>LTE</span>
+      <span class="logo-lg"><b>Future</b>ERP</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -257,7 +257,7 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs">杨天伟</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
@@ -265,8 +265,8 @@
                 <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
+                  杨天伟 - 开发人员
+                  <small>Member since Nov. 2018</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -309,14 +309,14 @@
           <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+          <p>杨天伟</p>
+          <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
         </div>
       </div>
       <!-- search form -->
       <form action="#" method="get" class="sidebar-form">
         <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
+          <input type="text" name="q" class="form-control" placeholder="查找...">
           <span class="input-group-btn">
                 <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
                 </button>
@@ -326,7 +326,20 @@
       <!-- /.search form -->
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">MAIN NAVIGATION</li>
+		<li class="header">导航栏</li>
+		<li><a href="../dashboard.html"><i class="fa fa-dashboard"></i> 仪表盘</a></li>
+		<li><a href="workflow.html"><i class="fa fa-edit"></i> 工单管理</a></li>
+		<li><a href="materials.html"><i class="fa fa-edit"></i> 生产资料</a></li>
+		<li><a href="order.html"><i class="fa fa-edit"></i> 订单管理</a></li>
+		<li><a href="purchase.html"><i class="fa fa-edit"></i> 采购</a></li>
+		<li><a href="sales.html"><i class="fa fa-edit"></i> 销售管理</a></li>
+		<li><a href="qc.html"><i class="fa fa-edit"></i> 质检</a></li>
+		<li><a href="finace.html"><i class="fa fa-edit"></i> 财务管理</a></li>
+		<li><a href="vendor.html"><i class="fa fa-edit"></i> 供应商</a></li>
+		<li><a href="customer.html"><i class="fa fa-edit"></i> 客户</a></li>
+		<li><a href="staff.html"><i class="fa fa-edit"></i> 员工</a></li>
+		<li><a href="admin.html"><i class="fa fa-edit"></i> 后台管理</a></li>
+        <!-- <li class="header">MAIN NAVIGATION</li>
         <li class="treeview">
           <a href="#">
             <i class="fa fa-dashboard"></i> <span>Dashboard</span>
@@ -494,7 +507,7 @@
         <li class="header">LABELS</li>
         <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
         <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-        <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+        <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li> -->
       </ul>
     </section>
     <!-- /.sidebar -->
@@ -505,12 +518,12 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Calendar
+        生产资料
         <small>Control panel</small>
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">Calendar</li>
+        <li><a href="../dashboard.html"><i class="fa fa-dashboard"></i> 主页</a></li>
+        <li class="active">生产资料</li>
       </ol>
     </section>
 
@@ -598,9 +611,9 @@
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 2.4.0
+      <b>Version</b> 0.0.1
     </div>
-    <strong>Copyright &copy; 2014-2016 <a href="https://adminlte.io">Almsaeed Studio</a>.</strong> All rights
+    <strong>Copyright &copy; 2018-2020 <a href="https://future.io">Future Studio</a>.</strong> All rights
     reserved.
   </footer>
 
