--- a/static/pages/workflow.html
+++ b/static/pages/workflow.html
@@ -686,7 +686,7 @@
 					<th>工单标题</th>
                     <th>业务类型</th>
                     <th>处理状态</th>
-                    <th>提交人</th>
+                    <th>当前处理人</th>
 					<th>更新时间</th>
                   </tr>
                   </thead>
