优化界面布局
Signed-off-by: Tianwei Yang <yangtianwei@outlook.com>

--- a/static/pages/qc.html
+++ b/static/pages/qc.html
@@ -44,7 +44,7 @@
     <!-- Logo -->
     <a href="../dashboard.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>E</b>RP</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>Future</b>ERP</span>
     </a>
