--- a/static/pages/workflow.html
+++ b/static/pages/workflow.html
@@ -100,7 +100,7 @@
     <!-- Logo -->
     <a href="../dashboard.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>E</b>RP</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>Future</b>ERP</span>
     </a>
@@ -603,7 +603,7 @@
               <i class="fa fa-shopping-cart"></i>
             </div>
             <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
+              详细 <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
         </div>
@@ -621,7 +621,7 @@
               <i class="ion ion-stats-bars"></i>
             </div>
             <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
+              详细 <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
         </div>
@@ -638,7 +638,7 @@
               <i class="ion ion-person-add"></i>
             </div>
             <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
+              详细 <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
         </div>
@@ -655,7 +655,7 @@
               <i class="ion ion-pie-graph"></i>
             </div>
             <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
+               <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
         </div>
