--- a/static/pages/order.html
+++ b/static/pages/order.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>FutureERP beta | 仪表盘</title>
+  <title>FutureERP beta | 订单管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -41,7 +41,7 @@
     <!-- Logo -->
     <a href="../dashboard.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>E</b>RP</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>Future</b>ERP</span>
     </a>
