--- a/static/pages/purchase.html
+++ b/static/pages/purchase.html
@@ -102,7 +102,7 @@
     <!-- Logo -->
     <a href="../dashboard.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>E</b>RP</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>Future</b>ERP</span>
     </a>
@@ -585,7 +585,7 @@
       </h1>
       <ol class="breadcrumb">
         <li><a href="../dashboard.html"><i class="fa fa-dashboard"></i> 主页</a></li>
-        <li class="active">工单管理</li>
+        <li class="active">采购</li>
       </ol>
     </section>
 
@@ -604,9 +604,9 @@
             <div class="icon">
               <i class="fa fa-shopping-cart"></i>
             </div>
-            <a href="#" class="small-box-footer">
+            <!-- <a href="#" class="small-box-footer">
               More info <i class="fa fa-arrow-circle-right"></i>
-            </a>
+            </a> -->
           </div>
         </div>
         <!-- ./col -->
@@ -622,9 +622,9 @@
             <div class="icon">
               <i class="ion ion-stats-bars"></i>
             </div>
-            <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
-            </a>
+            <!-- <a href="#" class="small-box-footer"> -->
+              <!-- More info <i class="fa fa-arrow-circle-right"></i> -->
+            <!-- </a> -->
           </div>
         </div>
         <!-- ./col -->
@@ -639,9 +639,9 @@
             <div class="icon">
               <i class="ion ion-person-add"></i>
             </div>
-            <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
-            </a>
+            <!-- <a href="#" class="small-box-footer"> -->
+              <!-- More info <i class="fa fa-arrow-circle-right"></i> -->
+            <!-- </a> -->
           </div>
         </div>
         <!-- ./col -->
@@ -656,9 +656,9 @@
             <div class="icon">
               <i class="ion ion-pie-graph"></i>
             </div>
-            <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
-            </a>
+            <!-- <a href="#" class="small-box-footer"> -->
+              <!-- More info <i class="fa fa-arrow-circle-right"></i> -->
+            <!-- </a> -->
           </div>
         </div>
         <!-- ./col -->
@@ -673,9 +673,9 @@
             <div class="icon">
               <i class="ion ion-pie-graph"></i>
             </div>
-            <a href="#" class="small-box-footer">
-              More info <i class="fa fa-arrow-circle-right"></i>
-            </a>
+            <!-- <a href="#" class="small-box-footer"> -->
+              <!-- More info <i class="fa fa-arrow-circle-right"></i> -->
+            <!-- </a> -->
           </div>
         </div>
         <!-- ./col -->
