优化界面布局2
Signed-off-by: Tianwei Yang <yangtianwei@outlook.com>

--- a/static/pages/workflow.html
+++ b/static/pages/workflow.html
@@ -327,7 +327,7 @@
 
                 <p>
                   杨天伟 - 开发人员
-                  <small>Member since Nov. 2018</small>
+                  <small>自 2018年11月</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -348,10 +348,10 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="#" class="btn btn-default btn-flat">个人资料</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="#" class="btn btn-default btn-flat">注销</a>
                 </div>
               </li>
             </ul>
@@ -850,7 +850,7 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <a href="javascript:detailInitial('新建工单')" class="btn btn-sm btn-info btn-flat pull-left">新建工单</a>
+              <a href="javascript:newticket('新建工单')" class="btn btn-sm btn-info btn-flat pull-left">新建工单</a>
               <a href="javascript:void(0)" class="btn btn-sm btn-default btn-flat pull-right">查看所有</a>
             </div>
             <!-- /.box-footer -->
@@ -868,7 +868,7 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 0.0.1
     </div>
-    <strong>Copyright &copy; 2018-2020 <a href="https://future.io">Future Studio</a>.</strong> All rights
+    <strong>Copyright &copy; 2018-2020 <a href="https://future.io">FutureSoft Studio</a>.</strong> All rights
     reserved.
   </footer>
 
@@ -1104,7 +1104,7 @@
 </script>
 
     <script>
-        function detailInitial(title) {
+        function newticket(title) {
             $("#close").show();
             $("#detail").animate({top: "5%"});
             $("#detail_title").html(title);
