--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -263,7 +263,7 @@
 
                 <p>
                   杨天伟 - 开发人员
-                  <small>Member since Nov. 2018</small>
+                  <small>自 2018年11月</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -284,10 +284,10 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="#" class="btn btn-default btn-flat">个人资料</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="#" class="btn btn-default btn-flat">注销</a>
                 </div>
               </li>
             </ul>
@@ -565,11 +565,11 @@
                   <button type="button" class="btn btn-box-tool dropdown-toggle" data-toggle="dropdown">
                     <i class="fa fa-wrench"></i></button>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">响应</a></li>
+                    <li><a href="#">其他响应</a></li>
+                    <li><a href="#">其他东西</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">链接</a></li>
                   </ul>
                 </div>
                 <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
@@ -580,7 +580,7 @@
               <div class="row">
                 <div class="col-md-8">
                   <p class="text-center">
-                    <strong>产出: 1 Jan, 2018 - 30 Jul, 2018</strong>
+                    <strong>产出: 2018/1/1 - 2018/7/30</strong>
                   </p>
 
                   <div class="chart">
@@ -875,7 +875,7 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 0.0.1
     </div>
-    <strong>Copyright &copy; 2018-2020 <a href="https://future.io">Future Studio</a>.</strong> All rights
+    <strong>Copyright &copy; 2018-2020 <a href="https://future.io">FutureSoft Studio</a>.</strong> All rights
     reserved.
   </footer>
 
