--- a/static/pages/materials.html
+++ b/static/pages/materials.html
@@ -271,7 +271,7 @@
 
                 <p>
                   杨天伟 - 开发人员
-                  <small>Member since Nov. 2018</small>
+                  <small>自 2018年11月</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -292,10 +292,10 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="#" class="btn btn-default btn-flat">个人资料</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="#" class="btn btn-default btn-flat">注销</a>
                 </div>
               </li>
             </ul>
@@ -576,7 +576,7 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 0.0.1
     </div>
-    <strong>Copyright &copy; 2018-2020 <a href="https://future.io">Future Studio</a>.</strong> All rights
+    <strong>Copyright &copy; 2018-2020 <a href="https://future.io">FutureSoft Studio</a>.</strong> All rights
     reserved.
   </footer>
 
