--- a/static/pages/qc.html
+++ b/static/pages/qc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>FutureERP beta | 质检</title>
+  <title>忱岳机械 beta | 质检</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -44,9 +44,9 @@
     <!-- Logo -->
     <a href="../dashboard.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>E</b>RP</span>
+      <span class="logo-mini">忱岳</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Future</b>ERP</span>
+      <span class="logo-lg"><b>忱岳机械</b>ERP</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -74,7 +74,7 @@
                   <li><!-- start message -->
                     <a href="#">
                       <div class="pull-left">
-                        <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="../dist/img/yangtianwei.JPG" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Support Team
@@ -261,13 +261,13 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="../dist/img/yangtianwei.JPG" class="user-image" alt="User Image">
               <span class="hidden-xs">杨天伟</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="../dist/img/yangtianwei.JPG" class="img-circle" alt="User Image">
 
                 <p>
                   杨天伟 - 开发人员
@@ -311,7 +311,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="../dist/img/yangtianwei.JPG" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>杨天伟</p>
